Fixed issue with Jetty